--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "crawler": "^1.2.1",
     "csv-write-stream": "^2.0.0",
-    "fs-extra": "^8.1.0"
+    "fs-extra": "^8.1.0",
+    "prettier": "^1.18.2",
+    "puppeteer": "^2.0.0"
   }
 }
