--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "clean": "node ./clean.js",
+    "screenshots": "node ./fetch-screenshots.js",
+    "csv": "node ./to-csv.js",
     "start": "node ./index.js"
   },
   "author": "",
@@ -13,6 +15,7 @@
     "crawler": "^1.2.1",
     "csv-write-stream": "^2.0.0",
     "fs-extra": "^8.1.0",
+    "node-json-db": "^1.0.2",
     "prettier": "^1.18.2",
     "puppeteer": "^2.0.0"
   }
